# farc-hd

./: README.md
farc_hd/: PKG-INFO  README.md  pyproject.toml
farc_hd/farc_hd/: FarcHDClassifier.py  __init__.py
farc_hd/farc_hd.egg-info/: SOURCES.txt  requires.txt  top_level.txt
