[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "farc-hd"
version = "1.1.0"
authors = [
  { name="Iñaki Mellado", email="inaki.mellado@gmail.com" },
]
description = "Fuzzy Association Rule-based Classification Model for High-Dimensional problems"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "numba>=0.55.0",
]

[tool.setuptools]
packages = ["farc_hd"]